Resolved some styling issues by making the new Matrix background fixed so content beyond the height of the page incorporates it. Also updated the width of the Nav and Matrix background components to 100% width to prevent overflow.

--- a/src/styles/MatrixBackground.scss
+++ b/src/styles/MatrixBackground.scss
@@ -2,8 +2,8 @@
 
 .MatrixBackground {
     height: 100%;
-    width: 100vw;
-    position: absolute;
+    max-width: 100%;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
@@ -44,7 +44,7 @@
 
 @keyframes colorChangeLight {
     from {
-        color: $GreenMid;
+        color: $GreenDark;
     }
     to {
         color: $GreenXL;
