--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     display: flex;
     min-height: 5rem;
-    width: 100vw;
+    width: 100%;
     background-color: $GreenBlack;
     display: flex;    
     justify-content: center;
